// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encode bit-depth-01 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  1,
  1,
  3,
  0,
  0,
  0,
  37,
  219,
  86,
  202,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  3,
  80,
  76,
  84,
  69,
  0,
  0,
  0,
  167,
  122,
  61,
  218,
  0,
  0,
  0,
  10,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  96,
  0,
  0,
  0,
  2,
  0,
  1,
  72,
  175,
  164,
  113,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode bit-depth-02 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  2,
  3,
  0,
  0,
  0,
  15,
  216,
  229,
  183,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  12,
  80,
  76,
  84,
  69,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  255,
  255,
  255,
  251,
  0,
  96,
  246,
  0,
  0,
  0,
  4,
  116,
  82,
  78,
  83,
  255,
  255,
  255,
  127,
  128,
  144,
  197,
  89,
  0,
  0,
  0,
  12,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  16,
  96,
  90,
  0,
  0,
  0,
  216,
  0,
  179,
  171,
  91,
  31,
  104,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode bit-depth-04 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  4,
  0,
  0,
  0,
  4,
  4,
  3,
  0,
  0,
  0,
  91,
  223,
  131,
  77,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  48,
  80,
  76,
  84,
  69,
  255,
  255,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  0,
  255,
  255,
  255,
  0,
  255,
  255,
  255,
  0,
  154,
  0,
  255,
  255,
  0,
  126,
  43,
  0,
  255,
  0,
  129,
  250,
  0,
  181,
  255,
  0,
  255,
  184,
  219,
  255,
  0,
  255,
  219,
  0,
  69,
  253,
  226,
  35,
  0,
  0,
  0,
  14,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  100,
  84,
  98,
  113,
  129,
  34,
  0,
  7,
  83,
  1,
  99,
  159,
  16,
  61,
  80,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode bit-depth-08 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  8,
  0,
  0,
  0,
  8,
  8,
  3,
  0,
  0,
  0,
  243,
  209,
  78,
  185,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  192,
  80,
  76,
  84,
  69,
  255,
  255,
  255,
  191,
  191,
  191,
  64,
  64,
  64,
  64,
  0,
  0,
  191,
  0,
  0,
  191,
  64,
  0,
  64,
  191,
  0,
  0,
  255,
  0,
  191,
  191,
  255,
  143,
  159,
  207,
  48,
  96,
  112,
  64,
  48,
  64,
  191,
  16,
  64,
  207,
  64,
  48,
  112,
  191,
  16,
  64,
  255,
  0,
  64,
  64,
  255,
  48,
  96,
  239,
  16,
  159,
  207,
  64,
  143,
  191,
  191,
  48,
  191,
  239,
  64,
  143,
  207,
  191,
  48,
  191,
  255,
  0,
  39,
  0,
  255,
  45,
  48,
  247,
  57,
  143,
  231,
  98,
  143,
  231,
  167,
  48,
  247,
  199,
  56,
  207,
  194,
  168,
  111,
  191,
  223,
  63,
  116,
  0,
  255,
  134,
  16,
  231,
  172,
  48,
  182,
  167,
  48,
  182,
  120,
  16,
  231,
  88,
  40,
  238,
  72,
  120,
  204,
  64,
  160,
  188,
  115,
  45,
  255,
  134,
  50,
  226,
  172,
  59,
  169,
  165,
  64,
  153,
  113,
  64,
  179,
  81,
  86,
  190,
  70,
  130,
  188,
  64,
  152,
  187,
  38,
  136,
  255,
  45,
  150,
  234,
  57,
  177,
  191,
  92,
  191,
  143,
  147,
  191,
  90,
  179,
  193,
  63,
  187,
  195,
  63,
  191,
  197,
  62,
  0,
  181,
  255,
  0,
  200,
  237,
  0,
  237,
  202,
  55,
  255,
  138,
  164,
  255,
  46,
  228,
  246,
  0,
  246,
  228,
  0,
  255,
  219,
  0,
  16,
  231,
  151,
  22,
  0,
  0,
  0,
  18,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  100,
  96,
  132,
  2,
  14,
  40,
  205,
  66,
  22,
  3,
  0,
  19,
  47,
  0,
  139,
  86,
  42,
  174,
  140,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode bit-depth-16 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  203,
  73,
  68,
  65,
  84,
  120,
  156,
  165,
  148,
  65,
  14,
  131,
  32,
  20,
  68,
  253,
  88,
  9,
  93,
  186,
  51,
  30,
  193,
  51,
  120,
  255,
  155,
  224,
  186,
  27,
  99,
  252,
  108,
  138,
  164,
  77,
  149,
  8,
  124,
  166,
  179,
  133,
  76,
  152,
  151,
  23,
  168,
  105,
  158,
  153,
  24,
  147,
  62,
  91,
  87,
  235,
  163,
  240,
  112,
  72,
  246,
  10,
  81,
  185,
  128,
  180,
  198,
  6,
  16,
  217,
  144,
  7,
  58,
  96,
  223,
  5,
  19,
  202,
  3,
  178,
  5,
  18,
  2,
  204,
  173,
  49,
  58,
  145,
  174,
  75,
  157,
  104,
  173,
  212,
  235,
  147,
  63,
  7,
  48,
  131,
  16,
  183,
  77,
  192,
  64,
  242,
  2,
  231,
  146,
  87,
  100,
  8,
  189,
  72,
  195,
  128,
  75,
  100,
  237,
  178,
  64,
  12,
  190,
  18,
  193,
  12,
  152,
  139,
  5,
  50,
  2,
  206,
  121,
  145,
  250,
  30,
  151,
  8,
  20,
  137,
  47,
  1,
  32,
  254,
  36,
  2,
  33,
  158,
  9,
  36,
  10,
  164,
  18,
  5,
  145,
  166,
  9,
  151,
  8,
  250,
  145,
  206,
  18,
  65,
  12,
  152,
  139,
  5,
  114,
  137,
  142,
  180,
  227,
  136,
  75,
  4,
  136,
  20,
  15,
  168,
  22,
  233,
  42,
  17,
  0,
  49,
  38,
  112,
  83,
  80,
  35,
  81,
  16,
  105,
  158,
  113,
  137,
  170,
  69,
  138,
  37,
  58,
  242,
  6,
  128,
  163,
  150,
  92,
  96,
  194,
  242,
  148,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode chunk-gMMA 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  0,
  136,
  184,
  189,
  197,
  73,
  176,
  0,
  0,
  1,
  82,
  73,
  68,
  65,
  84,
  120,
  156,
  181,
  149,
  187,
  10,
  194,
  48,
  20,
  134,
  27,
  172,
  138,
  46,
  86,
  28,
  186,
  136,
  208,
  209,
  39,
  208,
  119,
  16,
  95,
  67,
  240,
  5,
  220,
  156,
  5,
  95,
  195,
  71,
  112,
  18,
  156,
  165,
  75,
  113,
  18,
  71,
  197,
  65,
  16,
  17,
  188,
  130,
  119,
  37,
  132,
  32,
  255,
  73,
  173,
  28,
  138,
  103,
  8,
  124,
  63,
  52,
  253,
  78,
  154,
  164,
  226,
  245,
  178,
  160,
  132,
  64,
  246,
  125,
  228,
  74,
  5,
  217,
  126,
  60,
  48,
  168,
  215,
  173,
  200,
  162,
  47,
  16,
  151,
  11,
  6,
  205,
  38,
  114,
  163,
  193,
  52,
  200,
  229,
  152,
  6,
  135,
  3,
  6,
  221,
  46,
  114,
  173,
  198,
  52,
  200,
  102,
  153,
  6,
  155,
  13,
  6,
  189,
  30,
  114,
  181,
  250,
  195,
  224,
  126,
  199,
  32,
  157,
  102,
  26,
  44,
  151,
  24,
  12,
  6,
  200,
  229,
  50,
  211,
  32,
  149,
  98,
  26,
  204,
  102,
  24,
  4,
  1,
  114,
  177,
  200,
  52,
  72,
  38,
  153,
  6,
  211,
  41,
  6,
  243,
  57,
  114,
  62,
  255,
  111,
  131,
  241,
  24,
  131,
  253,
  30,
  153,
  126,
  86,
  195,
  224,
  118,
  139,
  105,
  48,
  26,
  145,
  25,
  109,
  228,
  231,
  147,
  105,
  144,
  201,
  32,
  211,
  227,
  110,
  24,
  12,
  135,
  24,
  184,
  46,
  242,
  233,
  196,
  52,
  160,
  45,
  208,
  162,
  6,
  246,
  245,
  202,
  155,
  128,
  222,
  161,
  95,
  13,
  60,
  207,
  178,
  62,
  219,
  92,
  30,
  106,
  117,
  189,
  26,
  6,
  116,
  145,
  18,
  9,
  57,
  150,
  74,
  139,
  133,
  30,
  229,
  227,
  242,
  97,
  53,
  26,
  6,
  225,
  45,
  232,
  67,
  174,
  200,
  247,
  35,
  12,
  206,
  231,
  48,
  3,
  89,
  174,
  187,
  90,
  233,
  6,
  34,
  12,
  104,
  11,
  122,
  13,
  10,
  5,
  122,
  217,
  169,
  50,
  246,
  65,
  167,
  131,
  129,
  250,
  47,
  56,
  142,
  162,
  237,
  214,
  113,
  212,
  219,
  117,
  11,
  116,
  31,
  136,
  118,
  27,
  131,
  86,
  11,
  121,
  50,
  65,
  166,
  151,
  172,
  125,
  60,
  98,
  240,
  89,
  131,
  240,
  50,
  214,
  96,
  183,
  227,
  77,
  96,
  124,
  133,
  245,
  58,
  166,
  65,
  191,
  31,
  207,
  224,
  13,
  171,
  48,
  129,
  123,
  117,
  222,
  227,
  250,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode chunk-pHYs 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  8,
  0,
  0,
  0,
  32,
  8,
  2,
  0,
  0,
  0,
  160,
  146,
  174,
  135,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  4,
  0,
  50,
  82,
  48,
  147,
  0,
  0,
  0,
  3,
  115,
  66,
  73,
  84,
  4,
  4,
  4,
  119,
  248,
  181,
  163,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  1,
  36,
  73,
  68,
  65,
  84,
  120,
  156,
  93,
  83,
  11,
  149,
  196,
  32,
  12,
  156,
  237,
  171,
  129,
  88,
  192,
  66,
  45,
  212,
  66,
  87,
  66,
  45,
  172,
  133,
  195,
  194,
  89,
  168,
  132,
  195,
  2,
  22,
  98,
  33,
  18,
  118,
  147,
  64,
  40,
  123,
  60,
  94,
  33,
  153,
  100,
  242,
  33,
  125,
  188,
  225,
  139,
  128,
  29,
  16,
  160,
  52,
  25,
  75,
  63,
  15,
  32,
  1,
  155,
  239,
  27,
  32,
  223,
  109,
  165,
  25,
  8,
  171,
  14,
  184,
  209,
  106,
  159,
  221,
  100,
  30,
  158,
  155,
  69,
  114,
  224,
  4,
  19,
  126,
  221,
  250,
  84,
  145,
  13,
  88,
  26,
  105,
  117,
  26,
  246,
  221,
  168,
  150,
  118,
  212,
  8,
  241,
  5,
  168,
  144,
  109,
  31,
  25,
  91,
  142,
  36,
  59,
  224,
  252,
  86,
  136,
  68,
  189,
  150,
  174,
  180,
  4,
  202,
  11,
  252,
  35,
  72,
  130,
  160,
  178,
  155,
  104,
  90,
  132,
  75,
  89,
  28,
  160,
  209,
  18,
  166,
  227,
  66,
  186,
  76,
  247,
  223,
  227,
  133,
  122,
  72,
  15,
  161,
  202,
  181,
  223,
  148,
  27,
  149,
  26,
  231,
  220,
  93,
  154,
  190,
  50,
  3,
  152,
  84,
  95,
  30,
  78,
  208,
  123,
  216,
  252,
  214,
  97,
  114,
  97,
  175,
  170,
  236,
  73,
  169,
  135,
  184,
  73,
  146,
  156,
  168,
  108,
  193,
  39,
  195,
  35,
  9,
  159,
  246,
  18,
  116,
  83,
  73,
  244,
  247,
  40,
  126,
  99,
  26,
  30,
  254,
  34,
  5,
  137,
  60,
  9,
  166,
  57,
  134,
  203,
  90,
  96,
  73,
  145,
  248,
  227,
  173,
  1,
  255,
  144,
  169,
  23,
  161,
  207,
  191,
  107,
  199,
  158,
  238,
  129,
  123,
  104,
  252,
  34,
  141,
  138,
  187,
  33,
  249,
  120,
  12,
  192,
  211,
  205,
  160,
  100,
  243,
  65,
  81,
  106,
  0,
  245,
  238,
  160,
  45,
  30,
  189,
  26,
  51,
  210,
  180,
  50,
  0,
  233,
  86,
  179,
  81,
  180,
  228,
  138,
  223,
  32,
  44,
  62,
  153,
  61,
  92,
  115,
  252,
  39,
  248,
  70,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode chunk-sRGB 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  2,
  3,
  0,
  0,
  0,
  15,
  216,
  229,
  183,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  12,
  80,
  76,
  84,
  69,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  255,
  255,
  255,
  251,
  0,
  96,
  246,
  0,
  0,
  0,
  4,
  116,
  82,
  78,
  83,
  255,
  255,
  255,
  127,
  128,
  144,
  197,
  89,
  0,
  0,
  0,
  12,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  16,
  96,
  90,
  0,
  0,
  0,
  216,
  0,
  179,
  171,
  91,
  31,
  104,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode filter-0 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  2,
  2,
  3,
  0,
  0,
  0,
  15,
  216,
  229,
  183,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  12,
  80,
  76,
  84,
  69,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  255,
  255,
  255,
  251,
  0,
  96,
  246,
  0,
  0,
  0,
  4,
  116,
  82,
  78,
  83,
  255,
  255,
  255,
  127,
  128,
  144,
  197,
  89,
  0,
  0,
  0,
  12,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  16,
  96,
  90,
  0,
  0,
  0,
  216,
  0,
  179,
  171,
  91,
  31,
  104,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode filter-1 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  203,
  73,
  68,
  65,
  84,
  120,
  156,
  165,
  148,
  65,
  14,
  131,
  32,
  20,
  68,
  253,
  88,
  9,
  93,
  186,
  51,
  30,
  193,
  51,
  120,
  255,
  155,
  224,
  186,
  27,
  99,
  252,
  108,
  138,
  164,
  77,
  149,
  8,
  124,
  166,
  179,
  133,
  76,
  152,
  151,
  23,
  168,
  105,
  158,
  153,
  24,
  147,
  62,
  91,
  87,
  235,
  163,
  240,
  112,
  72,
  246,
  10,
  81,
  185,
  128,
  180,
  198,
  6,
  16,
  217,
  144,
  7,
  58,
  96,
  223,
  5,
  19,
  202,
  3,
  178,
  5,
  18,
  2,
  204,
  173,
  49,
  58,
  145,
  174,
  75,
  157,
  104,
  173,
  212,
  235,
  147,
  63,
  7,
  48,
  131,
  16,
  183,
  77,
  192,
  64,
  242,
  2,
  231,
  146,
  87,
  100,
  8,
  189,
  72,
  195,
  128,
  75,
  100,
  237,
  178,
  64,
  12,
  190,
  18,
  193,
  12,
  152,
  139,
  5,
  50,
  2,
  206,
  121,
  145,
  250,
  30,
  151,
  8,
  20,
  137,
  47,
  1,
  32,
  254,
  36,
  2,
  33,
  158,
  9,
  36,
  10,
  164,
  18,
  5,
  145,
  166,
  9,
  151,
  8,
  250,
  145,
  206,
  18,
  65,
  12,
  152,
  139,
  5,
  114,
  137,
  142,
  180,
  227,
  136,
  75,
  4,
  136,
  20,
  15,
  168,
  22,
  233,
  42,
  17,
  0,
  49,
  38,
  112,
  83,
  80,
  35,
  81,
  16,
  105,
  158,
  113,
  137,
  170,
  69,
  138,
  37,
  58,
  242,
  6,
  128,
  163,
  150,
  92,
  96,
  194,
  242,
  148,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode filter-2 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  203,
  73,
  68,
  65,
  84,
  120,
  156,
  165,
  148,
  65,
  14,
  131,
  32,
  20,
  68,
  253,
  88,
  9,
  93,
  186,
  51,
  30,
  193,
  51,
  120,
  255,
  155,
  224,
  186,
  27,
  99,
  252,
  108,
  138,
  164,
  77,
  149,
  8,
  124,
  166,
  179,
  133,
  76,
  152,
  151,
  23,
  168,
  105,
  158,
  153,
  24,
  147,
  62,
  91,
  87,
  235,
  163,
  240,
  112,
  72,
  246,
  10,
  81,
  185,
  128,
  180,
  198,
  6,
  16,
  217,
  144,
  7,
  58,
  96,
  223,
  5,
  19,
  202,
  3,
  178,
  5,
  18,
  2,
  204,
  173,
  49,
  58,
  145,
  174,
  75,
  157,
  104,
  173,
  212,
  235,
  147,
  63,
  7,
  48,
  131,
  16,
  183,
  77,
  192,
  64,
  242,
  2,
  231,
  146,
  87,
  100,
  8,
  189,
  72,
  195,
  128,
  75,
  100,
  237,
  178,
  64,
  12,
  190,
  18,
  193,
  12,
  152,
  139,
  5,
  50,
  2,
  206,
  121,
  145,
  250,
  30,
  151,
  8,
  20,
  137,
  47,
  1,
  32,
  254,
  36,
  2,
  33,
  158,
  9,
  36,
  10,
  164,
  18,
  5,
  145,
  166,
  9,
  151,
  8,
  250,
  145,
  206,
  18,
  65,
  12,
  152,
  139,
  5,
  114,
  137,
  142,
  180,
  227,
  136,
  75,
  4,
  136,
  20,
  15,
  168,
  22,
  233,
  42,
  17,
  0,
  49,
  38,
  112,
  83,
  80,
  35,
  81,
  16,
  105,
  158,
  113,
  137,
  170,
  69,
  138,
  37,
  58,
  242,
  6,
  128,
  163,
  150,
  92,
  96,
  194,
  242,
  148,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode filter-3 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  8,
  0,
  0,
  0,
  0,
  86,
  17,
  37,
  40,
  0,
  0,
  1,
  37,
  73,
  68,
  65,
  84,
  120,
  156,
  133,
  211,
  177,
  74,
  4,
  49,
  16,
  6,
  224,
  249,
  147,
  73,
  178,
  10,
  98,
  33,
  8,
  22,
  22,
  54,
  22,
  54,
  54,
  130,
  96,
  99,
  101,
  119,
  149,
  96,
  97,
  39,
  220,
  3,
  8,
  215,
  89,
  29,
  87,
  9,
  22,
  7,
  215,
  8,
  22,
  130,
  133,
  157,
  47,
  224,
  3,
  136,
  149,
  216,
  248,
  50,
  218,
  153,
  196,
  35,
  153,
  220,
  122,
  115,
  3,
  187,
  97,
  225,
  35,
  153,
  217,
  201,
  96,
  220,
  133,
  46,
  196,
  240,
  222,
  187,
  24,
  236,
  44,
  219,
  24,
  198,
  24,
  196,
  32,
  216,
  227,
  244,
  38,
  74,
  207,
  223,
  178,
  240,
  201,
  63,
  180,
  52,
  76,
  18,
  252,
  189,
  28,
  100,
  161,
  237,
  144,
  5,
  46,
  67,
  76,
  114,
  77,
  201,
  244,
  60,
  172,
  16,
  3,
  175,
  11,
  156,
  133,
  34,
  70,
  229,
  236,
  175,
  42,
  112,
  234,
  139,
  184,
  41,
  224,
  179,
  238,
  129,
  19,
  87,
  69,
  62,
  229,
  130,
  232,
  77,
  156,
  130,
  35,
  223,
  138,
  33,
  209,
  171,
  204,
  3,
  135,
  174,
  17,
  49,
  143,
  151,
  38,
  83,
  28,
  56,
  41,
  38,
  68,
  143,
  109,
  45,
  216,
  103,
  33,
  102,
  57,
  197,
  103,
  41,
  176,
  231,
  132,
  120,
  160,
  113,
  170,
  69,
  10,
  236,
  178,
  20,
  243,
  106,
  133,
  192,
  14,
  255,
  35,
  68,
  30,
  216,
  182,
  61,
  49,
  161,
  251,
  250,
  215,
  177,
  101,
  123,
  226,
  142,
  166,
  181,
  47,
  216,
  228,
  34,
  222,
  105,
  48,
  175,
  229,
  182,
  118,
  14,
  27,
  166,
  136,
  15,
  202,
  226,
  137,
  72,
  220,
  100,
  172,
  219,
  70,
  228,
  184,
  22,
  221,
  71,
  103,
  122,
  226,
  74,
  222,
  15,
  120,
  35,
  133,
  95,
  236,
  109,
  0,
  27,
  93,
  192,
  66,
  23,
  136,
  247,
  86,
  21,
  105,
  0,
  85,
  17,
  39,
  81,
  23,
  105,
  72,
  85,
  145,
  71,
  88,
  19,
  191,
  192,
  71,
  44,
  204,
  159,
  232,
  61,
  23,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode filter-4 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  8,
  4,
  0,
  0,
  0,
  217,
  115,
  178,
  127,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  53,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  252,
  207,
  192,
  192,
  1,
  133,
  156,
  104,
  52,
  49,
  34,
  156,
  44,
  223,
  25,
  40,
  3,
  44,
  63,
  134,
  190,
  1,
  163,
  97,
  48,
  26,
  6,
  84,
  49,
  96,
  52,
  16,
  71,
  195,
  128,
  42,
  6,
  140,
  6,
  226,
  104,
  24,
  80,
  195,
  0,
  0,
  223,
  42,
  32,
  125,
  196,
  235,
  133,
  200,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode interlace-8x-size 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  2,
  0,
  0,
  0,
  1,
  107,
  166,
  13,
  31,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  112,
  73,
  68,
  65,
  84,
  120,
  156,
  173,
  140,
  187,
  17,
  128,
  32,
  16,
  68,
  151,
  19,
  3,
  11,
  32,
  50,
  179,
  19,
  2,
  11,
  48,
  216,
  196,
  2,
  136,
  204,
  45,
  139,
  22,
  133,
  227,
  198,
  95,
  98,
  34,
  51,
  199,
  60,
  222,
  237,
  130,
  73,
  18,
  234,
  236,
  146,
  186,
  65,
  146,
  219,
  224,
  87,
  216,
  61,
  194,
  47,
  240,
  51,
  124,
  120,
  48,
  250,
  220,
  103,
  97,
  100,
  20,
  6,
  6,
  41,
  64,
  41,
  192,
  151,
  107,
  57,
  148,
  211,
  22,
  141,
  234,
  86,
  73,
  107,
  74,
  218,
  253,
  206,
  57,
  144,
  116,
  101,
  244,
  165,
  198,
  132,
  59,
  141,
  152,
  224,
  205,
  88,
  234,
  106,
  253,
  244,
  207,
  1,
  243,
  67,
  39,
  18,
  169,
  78,
  230,
  206,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`encode interlace-odd-size 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  9,
  0,
  0,
  0,
  9,
  2,
  3,
  0,
  0,
  1,
  234,
  248,
  222,
  21,
  0,
  0,
  0,
  3,
  115,
  66,
  73,
  84,
  4,
  4,
  4,
  119,
  248,
  181,
  163,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  12,
  80,
  76,
  84,
  69,
  0,
  255,
  0,
  0,
  119,
  255,
  255,
  0,
  255,
  255,
  119,
  0,
  255,
  86,
  0,
  100,
  0,
  0,
  0,
  39,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  96,
  64,
  2,
  11,
  128,
  88,
  139,
  129,
  9,
  204,
  126,
  205,
  156,
  196,
  36,
  194,
  192,
  192,
  104,
  127,
  128,
  145,
  193,
  50,
  26,
  44,
  200,
  196,
  182,
  132,
  1,
  0,
  80,
  46,
  4,
  118,
  64,
  253,
  144,
  128,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;
